frame/support/test/tests/pallet_ui/error_001.stderr
error: Invalid pallet::error, expect item enum
  --> $DIR/error_001.rs:19:2
   |
19 |     pub struct Foo;
   |     ^^^
